--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
     sdk: flutter
   intl: ^0.18.1
   provider: ^6.0.5
+  flutter_screenutil: ^5.9.0
 
 dev_dependencies:
   flutter_test:
