--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.18.1
   provider: ^6.0.5
   flutter_screenutil: ^5.9.0
+  shared_preferences: ^2.2.1
 
 dev_dependencies:
   flutter_test:
